--- a/ped/ped.runs/impl_1/usage_statistics_webtalk.html
+++ b/ped/ped.runs/impl_1/usage_statistics_webtalk.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2258646</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Thu Nov 22 20:56:04 2018</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Thu Nov 22 22:55:26 2018</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2018.2 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>6041d13d4fe34368ad5923a705a66a52</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>1</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>2</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>cc1c76d4-45e1-49bb-a7b7-0a8bf54f8653</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>cc1c76d4-45e1-49bb-a7b7-0a8bf54f8653</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
@@ -32,36 +32,42 @@
 <TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>gui_handlers</B></TD></TR>
 <TR ALIGN='LEFT'>   <TD>abstractsearchablepanel_show_search=1</TD>
-   <TD>addsrcwizard_specify_hdl_netlist_block_design=1</TD>
-   <TD>basedialog_ok=3</TD>
-   <TD>basedialog_yes=2</TD>
+   <TD>addsrcwizard_specify_hdl_netlist_block_design=2</TD>
+   <TD>basedialog_ok=9</TD>
+   <TD>basedialog_yes=3</TD>
 </TR><TR ALIGN='LEFT'>   <TD>constraintschooserpanel_add_files=1</TD>
+   <TD>createsrcfiledialog_file_name=2</TD>
+   <TD>createsrcfiledialog_file_type=2</TD>
    <TD>expreporttreepanel_exp_report_tree_table=10</TD>
-   <TD>filesetpanel_file_set_panel_tree=25</TD>
-   <TD>flownavigatortreepanel_flow_navigator_tree=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>fpgachooser_category=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>filesetpanel_file_set_panel_tree=122</TD>
+   <TD>flownavigatortreepanel_flow_navigator_tree=3</TD>
+   <TD>fpgachooser_category=1</TD>
    <TD>fpgachooser_family=2</TD>
-   <TD>fpgachooser_fpga_table=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>fpgachooser_fpga_table=2</TD>
    <TD>fpgachooser_package=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>fpgachooser_speed=1</TD>
+   <TD>fpgachooser_speed=1</TD>
    <TD>fpgachooser_temperature=1</TD>
-   <TD>gettingstartedview_create_new_project=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>gettingstartedview_create_new_project=1</TD>
+   <TD>msgtreepanel_message_view_tree=1</TD>
    <TD>newprojectwizard_do_not_specify_sources_at_this_time=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_add_sources=3</TD>
-   <TD>pacommandnames_auto_update_hier=3</TD>
+   <TD>pacommandnames_add_sources=5</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_auto_update_hier=7</TD>
    <TD>pacommandnames_set_as_top=1</TD>
    <TD>projectnamechooser_choose_project_location=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>projectnamechooser_project_name=1</TD>
+   <TD>projectnamechooser_project_name=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>saveprojectutils_save=1</TD>
    <TD>srcchooserpanel_add_hdl_and_netlist_files_to_your_project=1</TD>
-   <TD>srcmenu_ip_hierarchy=3</TD>
+   <TD>srcchooserpanel_create_file=2</TD>
+   <TD>srcmenu_ip_hierarchy=7</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>java_command_handlers</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>addsources=3</TD>
+<TR ALIGN='LEFT'>   <TD>addsources=5</TD>
+   <TD>editdelete=1</TD>
    <TD>newproject=1</TD>
-   <TD>runbitgen=2</TD>
-   <TD>settopnode=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>showview=1</TD>
+   <TD>runbitgen=3</TD>
+</TR><TR ALIGN='LEFT'>   <TD>settopnode=1</TD>
+   <TD>showview=1</TD>
 </TR>  </TABLE>
 </TR><TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>other_data</B></TD></TR>
@@ -91,7 +97,7 @@
    <TD>launch_simulation_vcs=0</TD>
 </TR><TR ALIGN='LEFT'>   <TD>launch_simulation_xsim=0</TD>
    <TD>simulator_language=Mixed</TD>
-   <TD>srcsetcount=14</TD>
+   <TD>srcsetcount=15</TD>
    <TD>synthesisstrategy=Vivado Synthesis Defaults</TD>
 </TR><TR ALIGN='LEFT'>   <TD>target_language=Verilog</TD>
    <TD>target_simulator=XSim</TD>
@@ -632,10 +638,10 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:00:39s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:00:35s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=499.523MB</TD>
-    <TD>memory_peak=746.082MB</TD>
+    <TD>memory_gain=500.828MB</TD>
+    <TD>memory_peak=747.449MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
